reincluded notebooks for sampling standard, fixed_constraints

--- a/notebooks/01_sampling/fixed_constraints.ipynb
+++ b/notebooks/01_sampling/fixed_constraints.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "fd6688c8",
+   "execution_count": 1,
+   "id": "953e7105",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
     "%matplotlib agg\n",
     "\n",
     "\n",
-    "from global_settings import *\n",
+    "import global_settings\n",
     "from utils import settings, experiments, results\n",
     "import jax\n",
     "from multiprocessing import Pool\n",
@@ -23,14 +23,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "38fad5f8",
+   "execution_count": 2,
+   "id": "78199b70",
    "metadata": {},
    "outputs": [],
    "source": [
-    "experiment = experiments.ExperimentSample(\n",
+    "experiment = experiments.ExperimentSampleConstrained(\n",
     "    settings=settings.SettingsExperimentSample(\n",
-    "        output_path=PATH_RESULTS,\n",
+    "        output_path=global_settings.PATH_RESULTS,\n",
     "        dataset=\"sinusoidal\",\n",
     "        dataset_normalization=\"standardization\",\n",
     "        hidden_layers=1,\n",
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "raw",
-   "id": "fdbbbcc3",
+   "id": "44aa0006",
    "metadata": {},
    "source": [
     "experiment.run()"
@@ -58,10 +58,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "d23ef4a6",
+   "execution_count": 3,
+   "id": "84e2d1e4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 256/256 [01:17<00:00,  3.32it/s]\n"
+     ]
+    }
+   ],
    "source": [
     "def run_parallel(key):\n",
     "    experiment.sample(key)\n",
@@ -83,12 +91,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "fdaca788",
-   "metadata": {
-    "scrolled": false
-   },
-   "outputs": [],
+   "execution_count": 4,
+   "id": "dddb4bc9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "saved as /home/gw/data/experiments/master_thesis/results/bd5a1e9c17b4a149e37bef8d54e2d196.tar.gz\n"
+     ]
+    }
+   ],
    "source": [
     "print(f\"saved as {experiment.save()}\")"
    ]
