--- a/notebooks/01_sampling/standard.ipynb
+++ b/notebooks/01_sampling/standard.ipynb
@@ -40,7 +40,7 @@
     "        num_warmup=2**10,\n",
     "        statistic=\"reduced\",\n",
     "        statistic_p=0.95,\n",
-    "        samples_per_mode=64,\n",
+    "        samples_per_chain=64,\n",
     "        identifiable_modes=4,\n",
     "        pool_size=8,\n",
     "        seed=0\n",
