--- a/notebooks/01_sampling/fixed_constraints.ipynb
+++ b/notebooks/01_sampling/fixed_constraints.ipynb
@@ -26,12 +26,20 @@
    "execution_count": 2,
    "id": "78199b70",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "normalized probabilities: [0.5665243  0.3504857  0.08298998]\n"
+     ]
+    }
+   ],
    "source": [
     "experiment = experiments.ExperimentSampleConstrained(\n",
     "    settings=settings.SettingsExperimentSample(\n",
-    "        output_path=global_settings.PATH_RESULTS,\n",
-    "        dataset=\"sinusoidal\",\n",
+    "        output_path=global_settings.PATH_RESULTS_FIXED,\n",
+    "        dataset=\"regression2d\",\n",
     "        dataset_normalization=\"standardization\",\n",
     "        hidden_layers=1,\n",
     "        hidden_neurons=3,\n",
@@ -39,9 +47,9 @@
     "        activation_last_layer=\"none\",\n",
     "        num_warmup=2**10,\n",
     "        statistic=\"reduced\",\n",
-    "        statistic_p=0.95,\n",
-    "        samples_per_mode=64,\n",
-    "        identifiable_modes=4,\n",
+    "        statistic_p=0.99,\n",
+    "        samples_per_chain=1,\n",
+    "        identifiable_modes=3,\n",
     "        pool_size=8,\n",
     "        seed=0\n",
     "    )\n",
@@ -66,7 +74,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 256/256 [01:17<00:00,  3.32it/s]\n"
+      "100%|████████████████████████████████████████████████████████████████████████████████████████████| 1274/1274 [08:29<00:00,  2.50it/s]\n"
      ]
     }
    ],
@@ -99,7 +107,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "saved as /home/gw/data/experiments/master_thesis/results/bd5a1e9c17b4a149e37bef8d54e2d196.tar.gz\n"
+      "saved as /home/gw/data/experiments/master_thesis/results_fixed/25a6723e6c442799e19c4876bdd06f4b.tar.gz\n"
      ]
     }
    ],
