--- a/notebooks/04_posterior_analysis/posterior_parameters_cuts.ipynb
+++ b/notebooks/04_posterior_analysis/posterior_parameters_cuts.ipynb
@@ -155,15 +155,7 @@
    "execution_count": 2,
    "id": "2c4d38e5",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "normalized probabilities: [1.]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "samples_per_chain = 1024\n",
     "\n",
@@ -205,7 +197,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|█████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 20/20 [15:26<00:00, 46.31s/it]\n"
+      "100%|█████████████████████████████████████████████████████████████████████████████████████████| 20/20 [14:01<00:00, 42.06s/it]\n"
      ]
     }
    ],
@@ -239,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "id": "5248a087",
    "metadata": {},
    "outputs": [],
@@ -261,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "id": "301a578f",
    "metadata": {},
    "outputs": [],
@@ -283,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 7,
    "id": "cae7c293",
    "metadata": {
     "scrolled": false
@@ -296,7 +288,7 @@
        "<Figure size 400x400 with 2 Axes>"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -308,17 +300,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 8,
    "id": "9d04663b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "figure._figure.savefig(os.path.join(global_settings.PATH_FIGURES, \"same_chain_01.png\"), bbox_inches=\"tight\", dpi=96)"
+    "figure._figure.savefig(os.path.join(global_settings.PATH_FIGURES, \"same_chain_01.png\"), bbox_inches=\"tight\", dpi=96)\n",
+    "figure._figure.savefig(os.path.join(global_settings.PATH_FIGURES, \"same_chain_01.pdf\"), bbox_inches=\"tight\", dpi=96)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 9,
    "id": "63611ee6",
    "metadata": {},
    "outputs": [
@@ -329,7 +322,7 @@
        "<Figure size 400x400 with 2 Axes>"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -341,12 +334,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 10,
    "id": "d727dd60",
    "metadata": {},
    "outputs": [],
    "source": [
-    "figure._figure.savefig(os.path.join(global_settings.PATH_FIGURES, \"same_chain_02.png\"), bbox_inches=\"tight\", dpi=96)"
+    "figure._figure.savefig(os.path.join(global_settings.PATH_FIGURES, \"same_chain_02.png\"), bbox_inches=\"tight\", dpi=96)\n",
+    "figure._figure.savefig(os.path.join(global_settings.PATH_FIGURES, \"same_chain_02.pdf\"), bbox_inches=\"tight\", dpi=96)"
    ]
   },
   {
@@ -359,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 11,
    "id": "a030061d",
    "metadata": {},
    "outputs": [
@@ -370,7 +364,7 @@
        "<Figure size 400x400 with 2 Axes>"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -382,17 +376,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 12,
    "id": "2c29a38a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "figure._figure.savefig(os.path.join(global_settings.PATH_FIGURES, \"different_chains_01.png\"), bbox_inches=\"tight\", dpi=96)"
+    "figure._figure.savefig(os.path.join(global_settings.PATH_FIGURES, \"different_chains_01.png\"), bbox_inches=\"tight\", dpi=96)\n",
+    "figure._figure.savefig(os.path.join(global_settings.PATH_FIGURES, \"different_chains_01.pdf\"), bbox_inches=\"tight\", dpi=96)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 13,
    "id": "d36b2df9",
    "metadata": {},
    "outputs": [
@@ -403,7 +398,7 @@
        "<Figure size 400x400 with 2 Axes>"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -415,12 +410,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 14,
    "id": "19bbc54e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "figure._figure.savefig(os.path.join(global_settings.PATH_FIGURES, \"different_chains_02.png\"), bbox_inches=\"tight\", dpi=96)"
+    "figure._figure.savefig(os.path.join(global_settings.PATH_FIGURES, \"different_chains_02.png\"), bbox_inches=\"tight\", dpi=96)\n",
+    "figure._figure.savefig(os.path.join(global_settings.PATH_FIGURES, \"different_chains_02.pdf\"), bbox_inches=\"tight\", dpi=96)"
    ]
   },
   {
