updated to use indices also for toy datasets

--- a/notebooks/01_sampling/standard.ipynb
+++ b/notebooks/01_sampling/standard.ipynb
@@ -53,8 +53,9 @@
     "        statistic_p=0.99,\n",
     "        samples_per_chain=1,\n",
     "        identifiable_modes=3,\n",
-    "        pool_size=8,\n",
-    "        seed=0\n",
+    "        pool_size=2,\n",
+    "        seed=0,\n",
+    "        overwrite_chains=None\n",
     "    )\n",
     ")"
    ]
@@ -92,7 +93,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  1%|█▏                                                                                                                        | 13/1274 [01:36<2:35:15,  7.39s/it]\n",
+      "  2%|██                                                                                                                  | 22/1274 [02:33<2:25:52,  6.99s/it]\n",
       "\n",
       "KeyboardInterrupt\n",
       "\n"
@@ -121,11 +122,9 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "293e8d55",
+   "cell_type": "raw",
+   "id": "0ff9b33f",
    "metadata": {},
-   "outputs": [],
    "source": [
     "print(f\"saved as {experiment.save()}\")"
    ]
