updated after paper

--- a/notebooks/06_paper/expected_number_of_chains.ipynb
+++ b/notebooks/06_paper/expected_number_of_chains.ipynb
@@ -2,20 +2,27 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "id": "4142bc76-d738-4a79-9c26-0523ec75c32f",
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING:absl:No GPU/TPU found, falling back to CPU. (Set TF_CPP_MIN_LOG_LEVEL=0 and rerun for more info.)\n"
+     "ename": "ImportError",
+     "evalue": "cannot import name 'MLPSymmetryHelper' from 'utils' (/home/gw/code_mt/src/utils/__init__.py)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [6]\u001b[0m, in \u001b[0;36m<cell line: 5>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      2\u001b[0m sys\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mappend(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m/home/gw/code_mt/src\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m      4\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mtransformations\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m Sequential\n\u001b[0;32m----> 5\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mutils\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m MLPSymmetryHelper, expected_number_of_chains, bounded_expected_number_of_chains\n\u001b[1;32m      6\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mflax\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mlinen\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mnn\u001b[39;00m\n\u001b[1;32m      7\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mjax\u001b[39;00m\n",
+      "\u001b[0;31mImportError\u001b[0m: cannot import name 'MLPSymmetryHelper' from 'utils' (/home/gw/code_mt/src/utils/__init__.py)"
      ]
     }
    ],
    "source": [
-    "from transformation import Sequential\n",
+    "import sys\n",
+    "sys.path.append(\"/home/gw/code_mt/src\")\n",
+    "\n",
+    "from transformations import Sequential\n",
     "from utils import MLPSymmetryHelper, expected_number_of_chains, bounded_expected_number_of_chains\n",
     "import flax.linen as nn\n",
     "import jax\n",
@@ -29,7 +36,19 @@
    "execution_count": 2,
    "id": "a228b9af-7667-4ea5-a7fe-e6e877ae9366",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'Sequential' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [2]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0m t \u001b[38;5;241m=\u001b[39m \u001b[43mSequential\u001b[49m([\n\u001b[1;32m      2\u001b[0m     nn\u001b[38;5;241m.\u001b[39mDense(\u001b[38;5;241m3\u001b[39m),\n\u001b[1;32m      3\u001b[0m     nn\u001b[38;5;241m.\u001b[39mtanh,\n\u001b[1;32m      4\u001b[0m     nn\u001b[38;5;241m.\u001b[39mDense(\u001b[38;5;241m1\u001b[39m)\n\u001b[1;32m      5\u001b[0m ])\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'Sequential' is not defined"
+     ]
+    }
+   ],
    "source": [
     "t = Sequential([\n",
     "    nn.Dense(3),\n",
@@ -191,7 +210,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.5"
+   "version": "3.10.8"
   }
  },
  "nbformat": 4,
