--- a/notebooks/01_sampling/evaluation_quantitative.ipynb
+++ b/notebooks/01_sampling/evaluation_quantitative.ipynb
@@ -32,8 +32,8 @@
     "rng_key, rng_key_ = jax.random.split(jax.random.PRNGKey(0))\n",
     "\n",
     "method = \"de\"\n",
-    "#arch = \"1x3\"\n",
-    "arch = \"3x16\"\n",
+    "arch = \"1x3\"\n",
+    "#arch = \"3x16\"\n",
     "all_datasets = global_settings.DATASET_NAMES_TOY + global_settings.DATASET_NAMES_BENCHMARK"
    ]
   },
@@ -52,7 +52,8 @@
     "        prob_mean = jnp.exp(regression_model._outputs_likelihood(\n",
     "            yi_preds,\n",
     "            parameters_data_std).log_prob(yi)).mean(axis=0)\n",
-    "        log_prob_means.append(jnp.log(prob_mean))\n",
+    "        if prob_mean > 0.0:\n",
+    "            log_prob_means.append(jnp.log(prob_mean))\n",
     "    log_prob_means = jnp.array(log_prob_means)\n",
     "    return log_prob_means\n",
     "\n",
@@ -128,9 +129,10 @@
   },
   {
    "cell_type": "raw",
-   "id": "e6ddefeb",
+   "id": "cd0ef241",
    "metadata": {},
    "source": [
+    "# multiple chains\n",
     "mcmc_results_1_3 = [\n",
     "    \"6414c528c5f8cc0c9f08578de5fb1dbc\", # sinusoidal\n",
     "    \"e851ba9827843f1e59e7369eb2bf4c91\", # izmailov\n",
@@ -145,32 +147,88 @@
     "]\n",
     "\n",
     "mcmc_results_3_16 = [\n",
-    "    #\"a808fe4956a2583822937e9654f58b4b\", # sinusoidal\n",
+    "    \"a808fe4956a2583822937e9654f58b4b\", # sinusoidal\n",
     "    \"d172bb3351d21af3d07c84b34f188223\", # izmailov\n",
-    "    #\"5f56ab5d599c544f57c6f5ca76d3e902\", # regression2d\n",
+    "    \"5f56ab5d599c544f57c6f5ca76d3e902\", # regression2d\n",
     "    \"29ddbb4b844c16f9a87e5d061a3777ba\", # airfoil\n",
-    "    #\"5c0079ffed053247ef879940f02358af\", # concrete\n",
-    "    #\"b8b103c822ec9d6a4ef35a1a94651081\", # diabetes\n",
-    "    #\"e9e40d0589bf7db05883d6c38dc025ce\", # energy\n",
-    "    #\"e5fb896bed512d86a42081795e5fd1ec\", # forest_fire\n",
-    "    #\"9c2fef258d4aee3b4b8592de133cb70d\", # wine\n",
-    "    #\"1a9dfbace71b720e74f0a3a1cd1cc174\", # yacht\n",
+    "    \"5c0079ffed053247ef879940f02358af\", # concrete\n",
+    "    \"b8b103c822ec9d6a4ef35a1a94651081\", # diabetes\n",
+    "    \"e9e40d0589bf7db05883d6c38dc025ce\", # energy\n",
+    "    \"e5fb896bed512d86a42081795e5fd1ec\", # forest_fire\n",
+    "    \"9c2fef258d4aee3b4b8592de133cb70d\", # wine\n",
+    "    \"1a9dfbace71b720e74f0a3a1cd1cc174\", # yacht\n",
     "]"
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "51b71f46",
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "5b2113bc",
    "metadata": {},
+   "outputs": [],
    "source": [
-    "for element in mcmc_results_1_3[:1]:\n",
-    "#for element in mcmc_results_3_16:\n",
+    "# single chain\n",
+    "mcmc_results_1_3 = [\n",
+    "    \"b3af3a0ea3fc7e46433f902fe8b9f225\", # sinusoidal\n",
+    "    \"0b9f848939a236a30fec42dc58084826\", # izmailov\n",
+    "    \"ce9fe0998fe8f0d7f596bbecf76499f2\", # regression2d\n",
+    "    \"1ea6da9a6c9fb7e39eecb5ea087e37f1\", # airfoil\n",
+    "    \"f67e0acadb83f8a6d63c8b8193c86ba2\", # concrete\n",
+    "    \"5bb0996711a7fe1b88936ff4b6bae9b3\", # diabetes\n",
+    "    \"4cc5a81b36178e512b0143d6f3612bfe\", # energy\n",
+    "    \"2202552627d3aaad770e51b5895d8b23\", # forest_fire\n",
+    "    \"b24f2fb569843cefbbdb40c43b9954f0\", # wine\n",
+    "    \"b333f33099600f88f5ff6ac4b8673846\", # yacht\n",
+    "]\n",
+    "\n",
+    "mcmc_results_3_16 = [\n",
+    "    \"1283c45caee25a4c0c9c0344e5df5ac4\", # sinusoidal\n",
+    "    \"fd18d87e24ef0d03344bb9f51b3a75b6\", # izmailov\n",
+    "    \"bc84acd13d004c20513aaf2f4fc29422\", # regression2d\n",
+    "    \"74a38f4fbcd6a68923d80f4c07aaed7a\", # airfoil\n",
+    "    \"f197a20cdc59ddea2ee975ed8c3a201c\", # concrete\n",
+    "    \"5347d921f57ce6bbd17d610e4922b22b\", # diabetes\n",
+    "    \"6de44bd32977cde4e0ef7b2d5e1a9f7a\", # energy\n",
+    "    \"bdbe61391390ac728d0204edd056ffa5\", # forest_fire\n",
+    "    \"2b821001fef8c5126da2a1e032a302a9\", # wine\n",
+    "    \"f0a8af55f8c4ad0f6871b875f03545fe\", # yacht\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "62b02bae",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "mcmc sinusoidal -17.76, -0.59, 0.64, 0.12\n",
+      "mcmc izmailov 72.81, 0.91, 0.77, 0.09\n",
+      "mcmc regression2d 49.46, 0.95, 0.57, 0.08\n",
+      "mcmc airfoil 215.44, 0.72, 1.71, 0.10\n",
+      "mcmc concrete 51.67, 0.25, 1.02, 0.07\n",
+      "mcmc diabetes -108.18, -1.22, 0.84, 0.09\n",
+      "mcmc energy 363.58, 2.38, 1.41, 0.11\n",
+      "mcmc forest_fire -176.20, -1.69, 4.98, 0.49\n",
+      "mcmc wine 237.51, 9.14, 1.74, 0.29\n",
+      "mcmc yacht 8.83, 0.15, 12.90, 1.64\n"
+     ]
+    }
+   ],
+   "source": [
+    "#for element in mcmc_results_1_3:\n",
+    "for element in mcmc_results_3_16:\n",
     "    result = results.ResultSample.load_from_file(os.path.join(global_settings.PATH_PAPER_RESULTS, f\"{element}.tar.gz\"))\n",
     "    experiment = experiments.FactoryExperiment(result.experiment_type, **{\"settings\": result.settings})()\n",
     "    \n",
+    "    inputs = experiment._dataset.data_test[:, experiment._dataset.conditional_indices]\n",
+    "    outputs = experiment._dataset.data_test[:, experiment._dataset.dependent_indices]\n",
     "    log_prob_means = computed_lppd_mcmc(\n",
-    "        inputs=experiment._dataset.data_test[:, experiment._dataset.conditional_indices],\n",
-    "        outputs=experiment._dataset.data_test[:, experiment._dataset.dependent_indices],\n",
+    "        inputs=inputs,\n",
+    "        outputs=outputs,\n",
     "        parameters_network=result.samples[\"parameters\"],\n",
     "        parameters_data_std=result.samples[\"std\"],\n",
     "        regression_model=experiment._model\n",
@@ -178,10 +236,12 @@
     "    log_probs_sum = jnp.sum(log_prob_means, axis=0)\n",
     "    log_probs_mean = jnp.mean(log_prob_means, axis=0)\n",
     "    log_probs_std = jnp.std(log_prob_means, axis=0)\n",
+    "    log_probs_std_error = log_probs_std / jnp.sqrt(inputs.shape[0])\n",
     "    \n",
     "    if len(result.indices_test) == 0:\n",
     "        print(\"WARNING: trained on entire dataset?\")\n",
-    "    print(f\"dataset {experiment._settings.dataset}, lppd for model: sum {log_probs_sum}, mean {log_probs_mean}, std {log_probs_std}\")"
+    "    mcmc_str = \"{:.2f}, {:.2f}, {:.2f}, {:.2f}\".format(log_probs_sum.item(), log_probs_mean.item(), log_probs_std.item(), log_probs_std_error.item())\n",
+    "    print(\"mcmc\", experiment._settings.dataset, mcmc_str)"
    ]
   },
   {
@@ -203,42 +263,42 @@
      "output_type": "stream",
      "text": [
       "1 1\n",
-      "de sinusoidal -63.80, -2.13, 0.19\n",
-      "la sinusoidal -72.68, -2.42, 0.04\n",
+      "de sinusoidal -17.54, -0.58, 0.63, 0.11\n",
+      "la sinusoidal -17.12, -0.57, 0.53, 0.10\n",
       "1 1\n",
-      "de izmailov -161.93, -2.02, 0.16\n",
-      "la izmailov -144.45, -1.81, 0.09\n",
+      "de izmailov 44.97, 0.56, 0.57, 0.06\n",
+      "la izmailov 42.80, 0.54, 0.67, 0.07\n",
       "2 1\n",
-      "de regression2d -114.23, -2.20, 0.17\n",
-      "la regression2d -121.36, -2.33, 0.03\n",
+      "de regression2d -75.84, -1.46, 0.47, 0.06\n",
+      "la regression2d -1150.28, -27.39, 26.31, 3.65\n",
       "airfoil\n",
       "5 1\n",
-      "de airfoil -652.92, -2.17, 0.26\n",
-      "la airfoil -1075.77, -3.57, 3.16\n",
+      "de airfoil -488.38, -1.62, 0.44, 0.03\n",
+      "la airfoil -536.40, -1.78, 2.25, 0.13\n",
       "concrete\n",
       "8 1\n",
-      "de concrete -417.46, -2.03, 0.21\n",
-      "la concrete -898.42, -4.36, 6.48\n",
+      "de concrete -327.28, -1.59, 0.49, 0.03\n",
+      "la concrete -2983.95, -14.49, 14.58, 1.02\n",
       "diabetes\n",
       "10 1\n",
-      "de diabetes -185.74, -2.09, 0.40\n",
-      "la diabetes -232.16, -2.61, 0.02\n",
+      "de diabetes -130.82, -1.47, 0.63, 0.07\n",
+      "la diabetes -129.19, -1.45, 0.83, 0.09\n",
       "energy\n",
       "8 1\n",
-      "de energy -307.02, -1.99, 0.20\n",
-      "la energy -213.73, -1.39, 0.80\n",
+      "de energy -271.11, -1.76, 0.29, 0.02\n",
+      "la energy -4832.20, -32.00, 23.29, 1.88\n",
       "forest_fire\n",
       "12 1\n",
-      "de forest_fire -228.60, -2.20, 0.23\n",
-      "la forest_fire -290.72, -2.80, 0.05\n",
+      "de forest_fire -166.47, -1.60, 0.59, 0.06\n",
+      "la forest_fire -249.89, -2.40, 1.68, 0.16\n",
       "wine\n",
       "13 1\n",
-      "de wine -75.03, -2.08, 0.26\n",
-      "la wine -101.28, -2.81, 0.02\n",
+      "de wine -41.54, -1.15, 0.62, 0.10\n",
+      "la wine -710.85, -23.70, 25.61, 4.27\n",
       "yacht\n",
       "6 1\n",
-      "de yacht -135.10, -2.18, 0.26\n",
-      "la yacht -166.79, -2.69, 0.02\n"
+      "de yacht -70.91, -1.14, 1.08, 0.14\n",
+      "la yacht -341.21, -5.88, 11.89, 1.51\n"
      ]
     }
    ],
@@ -309,9 +369,9 @@
     "        transformation=model_transformation,\n",
     "        dataset=dataset\n",
     "    )\n",
-    "\n",
+    "    inputs = dataset.data_test[:, dataset.conditional_indices]\n",
     "    log_prob_means = computed_lppd_de(\n",
-    "        inputs=dataset.data_test[:, dataset.conditional_indices],\n",
+    "        inputs=inputs,\n",
     "        outputs=dataset.data_test[:, dataset.dependent_indices],\n",
     "        parameters_network=samples_converted,\n",
     "        parameters_data_std=sigmas,\n",
@@ -320,7 +380,8 @@
     "    log_probs_sum = jnp.sum(log_prob_means, axis=0)\n",
     "    log_probs_mean = jnp.mean(log_prob_means, axis=0)\n",
     "    log_probs_std = jnp.std(log_prob_means, axis=0)\n",
-    "    de_str = \"{:.2f}, {:.2f}, {:.2f}\".format(log_probs_sum.item(), log_probs_mean.item(), log_probs_std.item())\n",
+    "    log_probs_std_error = log_probs_std / jnp.sqrt(inputs.shape[0])\n",
+    "    de_str = \"{:.2f}, {:.2f}, {:.2f}, {:.2f}\".format(log_probs_sum.item(), log_probs_mean.item(), log_probs_std.item(), log_probs_std_error.item())\n",
     "\n",
     "\n",
     "    import torch\n",
@@ -398,8 +459,9 @@
     "    la_samples = la_samples_package_flax\n",
     "    la_sigma = jnp.array(log_sigma.exp().detach().numpy())\n",
     "\n",
+    "    inputs = dataset.data_test[:, dataset.conditional_indices]\n",
     "    log_prob_means = computed_lppd_la(\n",
-    "        inputs=dataset.data_test[:, dataset.conditional_indices],\n",
+    "        inputs=inputs,\n",
     "        outputs=dataset.data_test[:, dataset.dependent_indices],\n",
     "        parameters_network=la_samples,\n",
     "        parameters_data_std=jnp.ones((len(la_samples), 1)) * la_sigma,\n",
@@ -408,8 +470,9 @@
     "    log_probs_sum = jnp.sum(log_prob_means, axis=0)\n",
     "    log_probs_mean = jnp.mean(log_prob_means, axis=0)\n",
     "    log_probs_std = jnp.std(log_prob_means, axis=0)\n",
+    "    log_probs_std_error = log_probs_std / jnp.sqrt(inputs.shape[0])\n",
     "    #print(f\"dataset {dataset_name}, lppd for model: sum {log_probs_sum}, mean {log_probs_mean}, std {log_probs_std}\")\n",
-    "    la_str = \"{:.2f}, {:.2f}, {:.2f}\".format(log_probs_sum.item(), log_probs_mean.item(), log_probs_std.item())\n",
+    "    la_str = \"{:.2f}, {:.2f}, {:.2f}, {:.2f}\".format(log_probs_sum.item(), log_probs_mean.item(), log_probs_std.item(), log_probs_std_error.item())\n",
     "\n",
     "    print(\"de\", dataset_name, de_str)\n",
     "    print(\"la\", dataset_name, la_str)"
@@ -889,7 +952,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.5"
+   "version": "3.10.8"
   }
  },
  "nbformat": 4,
