--- a/notebooks/cardinality_equioutput_transformations.ipynb
+++ b/notebooks/cardinality_equioutput_transformations.ipynb
@@ -74,10 +74,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "layer_size = 128\n",
-    "cardinalities = np.zeros((layer_size, 3), dtype=np.float64)\n",
+    "max_layer_size = 128\n",
+    "cardinalities = np.zeros((max_layer_size, 3), dtype=np.float64)\n",
     "\n",
-    "for i in range(layer_size):\n",
+    "for i in range(max_layer_size):\n",
     "    current_cardinalities = tanh_mlp_cardinalities([i])\n",
     "    cardinalities[i, 0] = current_cardinalities[0]\n",
     "    cardinalities[i, 1] = current_cardinalities[1]\n",
