--- a/notebooks/01_sampling/standard.ipynb
+++ b/notebooks/01_sampling/standard.ipynb
@@ -5,7 +5,15 @@
    "execution_count": 1,
    "id": "fd6688c8",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:absl:No GPU/TPU found, falling back to CPU. (Set TF_CPP_MIN_LOG_LEVEL=0 and rerun for more info.)\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
@@ -13,7 +21,7 @@
     "\n",
     "\n",
     "import global_settings\n",
-    "from utils import settings, experiments, results\n",
+    "from utils import experiments, results\n",
     "import jax\n",
     "from multiprocessing import Pool\n",
     "from tqdm import tqdm\n",
@@ -40,7 +48,7 @@
    "outputs": [],
    "source": [
     "experiment = experiments.ExperimentSampleStandard(\n",
-    "    settings=settings.SettingsExperimentSample(\n",
+    "    settings=experiments.settings.SettingsExperimentSample(\n",
     "        output_path=global_settings.PATH_PAPER_RESULTS,\n",
     "        dataset=\"wine\",\n",
     "        dataset_normalization=\"standardization\",\n",
@@ -93,7 +101,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  2%|██                                                                                                                  | 22/1274 [02:33<2:25:52,  6.99s/it]\n",
+      " 16%|██████████████▋                                                                             | 203/1274 [23:23<2:03:26,  6.92s/it]\n",
       "\n",
       "KeyboardInterrupt\n",
       "\n"
@@ -146,7 +154,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.5"
+   "version": "3.10.9"
   }
  },
  "nbformat": 4,
