--- a/notebooks/01_sampling/standard.ipynb
+++ b/notebooks/01_sampling/standard.ipynb
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "2642fe95",
    "metadata": {},
    "outputs": [],
@@ -50,7 +50,7 @@
     "experiment = experiments.ExperimentSampleStandard(\n",
     "    settings=experiments.settings.SettingsExperimentSample(\n",
     "        output_path=global_settings.PATH_PAPER_RESULTS,\n",
-    "        dataset=\"wine\",\n",
+    "        dataset=global_settings.DATASET_NAMES[0],\n",
     "        dataset_normalization=\"standardization\",\n",
     "        hidden_layers=1,\n",
     "        hidden_neurons=3,\n",
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "39d7cb10",
    "metadata": {},
    "outputs": [
@@ -94,17 +94,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "model transformation parameters 46\n"
+      "model transformation parameters 10\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 16%|██████████████▋                                                                             | 203/1274 [23:23<2:03:26,  6.92s/it]\n",
-      "\n",
-      "KeyboardInterrupt\n",
-      "\n"
+      "100%|█████████████████████████████████████████████████████████████████████████████████████| 1274/1274 [08:54<00:00,  2.38it/s]\n"
      ]
     }
    ],
@@ -130,9 +127,19 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "0ff9b33f",
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "bbbbd1a5",
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "saved as /home/gw/data/experiments/paper/results/cd75123389f8789603a02650aaa042de.tar.gz\n"
+     ]
+    }
+   ],
    "source": [
     "print(f\"saved as {experiment.save()}\")"
    ]
