refactoring, adding experiment notebooks

--- a/notebooks/experiment_performance_mcmc.ipynb
+++ b/notebooks/experiment_performance_mcmc.ipynb
@@ -47,7 +47,7 @@
     "experiment = experiments.ExperimentSampleStandard(\n",
     "    settings=experiments.settings.SettingsExperimentSample(\n",
     "        output_path=global_settings.PATH_RESULTS,\n",
-    "        dataset=global_settings.DATASET_NAMES[0],\n",
+    "        dataset=global_settings.DATASET_NAMES[1],\n",
     "        dataset_normalization=\"standardization\",\n",
     "        hidden_layers=1,\n",
     "        hidden_neurons=3,\n",
@@ -55,16 +55,19 @@
     "        activation_last_layer=\"none\",\n",
     "        num_warmup=2**10,\n",
     "        statistic=\"reduced\",\n",
-    "        statistic_p=0.0,\n",
-    "        samples_per_chain=1274,\n",
-    "        identifiable_modes=1,\n",
+    "        statistic_p=0.99,\n",
+    "        samples_per_chain=1,\n",
+    "        identifiable_modes=3,\n",
     "        pool_size=1, # has no effect in jupyter notebook, use script instead\n",
     "        seed=0,\n",
     "        overwrite_chains=None\n",
     "    )\n",
     ")\n",
     "\n",
-    "# for our approach: set for example statistic_p=0.99, identifiable_modes=3, samples_per_chain=1"
+    "# for single chain approach, set for example:\n",
+    "# * statistic_p=0.0\n",
+    "# * identifiable_modes=1\n",
+    "# * samples_per_chain=1274"
    ]
   },
   {
@@ -77,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "76a2a019",
    "metadata": {},
    "outputs": [
@@ -93,8 +96,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\r",
-      "  0%|                                                                                                                                                                                                       | 0/1 [00:00<?, ?it/s]"
+      "100%|███████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 1/1 [00:19<00:00, 19.84s/it]\n"
      ]
     }
    ],
@@ -149,12 +151,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "73c8af85",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "mcmc izmailov lppd: 0.65, std_error: 0.07\n"
+     ]
+    }
+   ],
    "source": [
-    "# retrieve relevant results\n",
     "dataset = experiment._dataset\n",
     "samples = experiment.result.samples\n",
     "model = experiment._model\n",
@@ -177,7 +186,7 @@
     "if len(experiment.result.indices_test) == 0:\n",
     "    print(\"WARNING: trained on entire dataset?\")\n",
     "mcmc_str = \"lppd: {:.2f}, std_error: {:.2f}\".format(log_probs_mean.item(), log_probs_std_error.item())\n",
-    "print(\"mcmc (ours)\", experiment._settings.dataset, mcmc_str)"
+    "print(\"mcmc\", experiment._settings.dataset, mcmc_str)"
    ]
   }
  ],
